--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,11 @@
-# Copy this template to .env.local and fill in your Firebase values
+# Firebase Configuration
+# Note: The Firebase config is now hardcoded in src/lib/firebase.ts
+# This file is kept for reference only
 
-# Firebase Configuration (Get these from Firebase Console > Project Settings)
-VITE_FIREBASE_API_KEY=AIzaSy...
-VITE_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
-VITE_FIREBASE_APP_ID=1:123456789:web:abc123
-
-# API Configuration (Replace 'your-project-id' with your actual project ID)
-VITE_API_BASE_URL=http://localhost:5001/your-project-id/us-central1/api
+# If you want to use environment variables instead, update firebase.ts to use:
+# VITE_FIREBASE_API_KEY=AIzaSyCAbXN9unFCNvTO2HtxFdgZkTA9NMcjJUo
+# VITE_FIREBASE_AUTH_DOMAIN=diety-204b0.firebaseapp.com
+# VITE_FIREBASE_PROJECT_ID=diety-204b0
+# VITE_FIREBASE_STORAGE_BUCKET=diety-204b0.firebasestorage.app
+# VITE_FIREBASE_MESSAGING_SENDER_ID=1071397904810
+# VITE_FIREBASE_APP_ID=1:1071397904810:web:7c157fa97c81ba3f104bd3
